--- a/snippets/simple-megamenu.liquid
+++ b/snippets/simple-megamenu.liquid
@@ -9,7 +9,7 @@
             <p class="text-base mb-0">{{ blkSet.text_sub1 }}</p>
             <h1 class="text-2xl font-blod">{{ blkSet.text_main1 }}</h1>
             {% if blkSet.text_link1 != blank %}
-            <div class="mt-auto"> <a class="text-lg" href="{{ blkSet.url_link1 }}">{{ blkSet.text_link1 }} ></a> </div>
+            <div class="mt-auto"> <a class="!text-base" href="{{ blkSet.url_link1 }}">{{ blkSet.text_link1 }} ></a> </div>
             {% endif %}
 
         </div>
@@ -27,7 +27,7 @@
             <p class="text-base mb-0">{{ blkSet.text_sub2 }}</p>
             <h1 class="text-2xl font-blod">{{ blkSet.text_main2 }}</h1>
             {% if blkSet.text_link2 != blank %}
-            <div class="mt-auto"> <a class="text-lg" href="{{ blkSet.url_link2 }}">{{ blkSet.text_link2 }} ></a> </div>
+            <div class="mt-auto"> <a class="!text-base" href="{{ blkSet.url_link2 }}">{{ blkSet.text_link2 }} ></a> </div>
             {% endif %}
 
         </div>
@@ -44,7 +44,7 @@
             <p class="text-base mb-0">{{ blkSet.text_sub3 }}</p>
             <h1 class="text-2xl font-blod">{{ blkSet.text_main3 }}</h1>
             {% if blkSet.text_link3 != blank %}
-            <div class="mt-auto"> <a class="text-lg" href="{{ blkSet.url_link3 }}">{{ blkSet.text_link3 }} ></a> </div>
+            <div class="mt-auto"> <a class="!text-base" href="{{ blkSet.url_link3 }}">{{ blkSet.text_link3 }} ></a> </div>
             {% endif %}
 
         </div>
