--- a/assets/custom.css
+++ b/assets/custom.css
@@ -92,8 +92,13 @@
 
 #header {
   transition-property:color, background-color, border-color, text-decoration-color, fill, stroke;
-  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration:500ms;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+#header.active {
+  position:absolute !important;
+  top:auto !important;
 }
 
 body.template-index .stickyHeader [tag-name = 'reversal-logo'] {
@@ -293,7 +298,7 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 @media (min-width: 769px) {
   .slideshow-wrapper .hbStyle .flickity-page-dots .dot.is-selected {
-    width:2rem;
+    width:2.5rem;
   }
 }
 
@@ -508,6 +513,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   [flickity-screen='mobile']:after {
     --tw-content:none;
     content:var(--tw-content);
+  }
+
+  #siteNav [tag-name="main-menu"] + ul.active {
+    visibility:visible;
+    opacity:1;
   }
 }
 
@@ -1054,6 +1064,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   margin-top:auto;
 }
 
+.\!block {
+  display:block !important;
+}
+
 .block {
   display:block;
 }
@@ -1202,6 +1216,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   width:6rem;
 }
 
+.w-3\/5 {
+  width:60%;
+}
+
 .w-32 {
   width:8rem;
 }
@@ -1220,6 +1238,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .w-48 {
   width:12rem;
+}
+
+.w-5 {
+  width:1.25rem;
 }
 
 .w-56 {
@@ -1256,18 +1278,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .w-full {
   width:100%;
-}
-
-.w-4 {
-  width:1rem;
-}
-
-.w-5 {
-  width:1.25rem;
-}
-
-.w-3\/5 {
-  width:60%;
 }
 
 .max-w-1\/3 {
@@ -1756,6 +1766,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 .\!text-5xl {
   font-size:3rem !important;
   line-height:1 !important;
+}
+
+.\!text-base {
+  font-size:1rem !important;
+  line-height:1.5rem !important;
 }
 
 .\!text-lg {
@@ -2497,9 +2512,9 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     padding:0.5rem;
   }
 
-  .md\:\!px-7 {
-    padding-left:1.75rem !important;
-    padding-right:1.75rem !important;
+  .md\:\!px-5 {
+    padding-left:1.25rem !important;
+    padding-right:1.25rem !important;
   }
 
   .md\:\!py-0 {
@@ -2507,9 +2522,9 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     padding-bottom:0px !important;
   }
 
-  .md\:\!py-3 {
-    padding-top:0.75rem !important;
-    padding-bottom:0.75rem !important;
+  .md\:\!py-1 {
+    padding-top:0.25rem !important;
+    padding-bottom:0.25rem !important;
   }
 
   .md\:px-0 {
@@ -2565,26 +2580,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   .md\:py-6 {
     padding-top:1.5rem;
     padding-bottom:1.5rem;
-  }
-
-  .md\:\!px-6 {
-    padding-left:1.5rem !important;
-    padding-right:1.5rem !important;
-  }
-
-  .md\:\!py-2 {
-    padding-top:0.5rem !important;
-    padding-bottom:0.5rem !important;
-  }
-
-  .md\:\!px-5 {
-    padding-left:1.25rem !important;
-    padding-right:1.25rem !important;
-  }
-
-  .md\:\!py-1 {
-    padding-top:0.25rem !important;
-    padding-bottom:0.25rem !important;
   }
 
   .md\:pb-0 {
