--- a/assets/custom.css
+++ b/assets/custom.css
@@ -129,19 +129,14 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   display:none !important;
 }
 
-.template-index #header.stickyHeader [section-name = 'localization'] select {
-  --tw-text-opacity:1;
-  color:rgb(0 0 0 / var(--tw-text-opacity));
+[section-name = 'localization'] a > img {
+  height:1rem;
 }
 
-.template-index #header [section-name = 'localization'] select {
-  --tw-text-opacity:1;
-  color:rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.footer-bottom [section-name = 'localization'] select {
-  --tw-text-opacity:1;
-  color:rgb(255 255 255 / var(--tw-text-opacity));
+.footer-bottom [section-name = 'localization'] > div,
+.footer-top ~ div [section-name = 'localization'] > div {
+  right:auto;
+  top:-9rem;
 }
 
 [section-name = 'color-slider-full'] div.is-selected [tag-name = 'color-block'] > div {
@@ -488,11 +483,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     width:1.25rem;
   }
 
-  #shopify-section-footer [section-name = 'localization'] select {
-    --tw-text-opacity:1;
-    color:rgb(170 170 170 / var(--tw-text-opacity));
-  }
-
   #CartCount, .favCount {
     top:-0.25rem;
     height:1rem;
@@ -793,6 +783,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   }
 }
 
+.imgPlaceholder {
+  background: linear-gradient(159.09deg,#313131 7.96%,#6f726c 86.18%);
+}
+
 .visible {
   visibility:visible;
 }
@@ -859,6 +853,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .top-1\/3 {
   top:33.333333%;
+}
+
+.top-10 {
+  top:2.5rem;
 }
 
 .top-13 {
@@ -1014,6 +1012,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .ml-4 {
   margin-left:1rem;
+}
+
+.mr-2 {
+  margin-right:0.5rem;
 }
 
 .mr-4 {
@@ -1210,6 +1212,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .w-2\/3 {
   width:66.666667%;
+}
+
+.w-20 {
+  width:5rem;
 }
 
 .w-24 {
@@ -1464,6 +1470,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 .bg-gray-200 {
   --tw-bg-opacity:1;
   background-color:rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.bg-gray-800 {
+  --tw-bg-opacity:1;
+  background-color:rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
 .bg-vi {
@@ -1876,6 +1887,15 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   line-height:1.25;
 }
 
+.tracking-wide {
+  letter-spacing:0.025em;
+}
+
+.\!text-gray-800 {
+  --tw-text-opacity:1 !important;
+  color:rgb(31 41 55 / var(--tw-text-opacity)) !important;
+}
+
 .\!text-white {
   --tw-text-opacity:1 !important;
   color:rgb(255 255 255 / var(--tw-text-opacity)) !important;
@@ -1956,6 +1976,12 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 .shadow-sm {
   --tw-shadow:0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored:0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl {
+  --tw-shadow:0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored:0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2146,12 +2172,32 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   margin-right:0px;
 }
 
+.hover\:bg-gray-200:hover {
+  --tw-bg-opacity:1;
+  background-color:rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-700:hover {
+  --tw-bg-opacity:1;
+  background-color:rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-left:hover {
   background-position:left;
 }
 
 .hover\:opacity-90:hover {
   opacity:0.9;
+}
+
+.focus\:bg-gray-700:focus {
+  --tw-bg-opacity:1;
+  background-color:rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+.focus\:outline-none:focus {
+  outline:2px solid transparent;
+  outline-offset:2px;
 }
 
 @media (min-width: 769px) {
@@ -2826,6 +2872,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   .lg\:px-12 {
     padding-left:3rem;
     padding-right:3rem;
+  }
+
+  .lg\:px-20 {
+    padding-left:5rem;
+    padding-right:5rem;
   }
 
   .lg\:pb-14 {
