--- a/sections/logo-slider.liquid
+++ b/sections/logo-slider.liquid
@@ -31,9 +31,12 @@ style="{% if secSt.bg_color != blank %}background-color: {{ secSt.bg_color}};{% 
       <section {% if isStyle %}class=" mx-auto"{% endif %} >
         <div data-flickity='{"draggable": false, "asNavFor": "#carousel-main-{{section.id}}", "contain": true, {% unless isStyle %}"pageDots": false,{% endunless %} "wrapAround": true,"prevNextButtons": false,"selectedAttraction": 0.01,"friction": 0.15}'>
           {% for block in section.blocks %}
-          <div class="{% if isStyle %}w-full{% else %}lg:w-1/5 md:w-1/4 w-1/3{% endif %} cursor-pointer text-center">
+          <div class="{% if isStyle %}w-full{% else %}lg:w-1/5 lg:px-20 md:w-1/4 w-1/3{% endif %} cursor-pointer text-center">
             {% assign media = block.settings.logo_image %}
-            {{ media | image_url: width: 200 | image_tag: height: media.height, lazyload: true, class: 'grayscale transition-all scale-90 max-h-9 md:h-auto h-8 object-contain' }}
+            {% comment %} {{ media | image_url: width: 200 | image_tag: height: media.height, class: 'grayscale transition-all scale-90 max-h-9 md:h-auto h-8 object-contain' }} {% endcomment %}
+            
+            {% include 'aspect-ratio-img', media: media ,class: 'grayscale transition-all scale-90 object-contain'%}
+          
           </div>
           {% endfor %}
         </div>
