--- a/snippets/localization.liquid
+++ b/snippets/localization.liquid
@@ -1,7 +1,5 @@
-
-
 {% if settings.current_flag != blank and settings.region_menu != blank %}
-<section section-name="localization" class="mr-4 flex">
+{% comment %} <section section-name="localization" class="mr-4 flex">
   <div class="flex items-center">
     {{ settings.current_flag | image_url: width: 100 | image_tag: loading: 'lazy', class: "h-auto w-5" }}
   </div>
@@ -11,6 +9,23 @@
       <option value= "{{ link.url }} "> {{ link.title | split: '[' | first }} </option>
       {% endfor %}
     </select>
-</section>
+</section> {% endcomment %}
+
+
+<div id="country_select" section-name="localization" class="flex items-center relative mr-2">
+  <button class="flex justify-between border-none cursor-pointer p-2 capitalize tracking-wide bg-gray-800 text-white font-medium rounded-md hover:bg-gray-700 focus:outline-none focus:bg-gray-700 w-20">
+    {{ settings.current_flag | image_url: width: 100 | image_tag: loading: 'lazy', class: "h-auto w-5" }}
+    USA
+  </button>
+  <div class="absolute w-20 bg-white rounded-md shadow-xl z-20 text-sm hidden top-10">
+    {% for link in linklists[settings.region_menu].links %}
+      <a class="cursor-pointer flex px-4 py-2 !text-gray-800 border-b hover:bg-gray-200 justify-between" href= "{{ link.url }} ">
+          {% assign dcT = link.title | downcase %}
+          <img src="https://flagicons.lipis.dev/flags/4x3/{% if dcT == 'uk' %}gb{% else %}{{ dcT }}{% endif %}.svg" alt="">
+          <span>{{ link.title }}</span>
+      </a>
+    {% endfor %}
+  </div>
+</div>
 
 {% endif %}
