--- a/snippets/swatch.liquid
+++ b/snippets/swatch.liquid
@@ -3,10 +3,16 @@
 	assign optg = optindex | plus: 1
 	assign downcased_option = swatch.name | downcase
 	assign is_color = false
+	assign is_size = false
 
 	assign colorOptions = settings.colorOpt | downcase | replace:", ","," | replace:" , ","," | replace:" ,","," | split: ","
 	if colorOptions contains downcased_option
 		assign is_color = true 
+	endif
+
+	assign sizeOptions = settings.sizeOpt | downcase | replace:", ","," | replace:" , ","," | replace:" ,","," | split: ","
+	if sizeOptions contains downcased_option
+		assign is_size = true 
 	endif
 -%}
 
@@ -36,7 +42,7 @@
                 {% endif %}
                 <span class="tooltip-label top">{{ value }}</span>
 			{% else %}
-			    <label class="swatchLbl w-16 md:!h-7 md:!py-0 !py-1 !h-auto md:!text-base !text-sm" for="{{product.id}}-{{ optg }}-{{ value | handle }}">{{ value }}</label>            	
+			    <label class="swatchLbl {% if is_size %}w-16 {% endif %}md:!h-7 md:!py-0 !py-1 !h-auto md:!text-base !text-sm" for="{{product.id}}-{{ optg }}-{{ value | handle }}">{{ value }}</label>            	
 			{% endif %}
 			</div>
 		{% endunless %}
