--- a/assets/custom.css
+++ b/assets/custom.css
@@ -2583,6 +2583,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     padding-right:0.25rem;
   }
 
+  .md\:px-3 {
+    padding-left:0.75rem;
+    padding-right:0.75rem;
+  }
+
   .md\:px-4 {
     padding-left:1rem;
     padding-right:1rem;
