--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -283,6 +283,35 @@ quick buy information in a template, that will be extracted in JS, but ensure it
       ]
     },
     {
+      "type": "gift",
+      "name": "Gift",
+      "settings": [
+        {
+          "type": "text",
+          "id": "title",
+          "label": "Title",
+          "default": "Exclusive Subscription Offer"
+        },
+        {
+          "type": "product",
+          "id": "pr",
+          "label": "Choosing a Giveaway"
+        },
+        {
+          "type": "textarea",
+          "id": "con",
+          "label": "Content",
+          "default": " to receive FREE accessories with your Bike order."
+        },
+        {
+          "type": "textarea",
+          "id": "badge_con",
+          "label": "badge text",
+          "default": "FREE"
+        }
+      ]
+    },
+    {
       "type": "price",
       "name": "Price",
       "limit": 1,
