--- a/assets/tw-custom.css
+++ b/assets/tw-custom.css
@@ -46,6 +46,10 @@
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
+  --tw-contain-size:  ;
+  --tw-contain-layout:  ;
+  --tw-contain-paint:  ;
+  --tw-contain-style:  ;
 }
 
 ::backdrop{
@@ -96,6 +100,10 @@
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
+  --tw-contain-size:  ;
+  --tw-contain-layout:  ;
+  --tw-contain-paint:  ;
+  --tw-contain-style:  ;
 }
 
 .tw-absolute{
@@ -106,10 +114,6 @@
   position: relative;
 }
 
-.tw-bottom-0{
-  bottom: 0px;
-}
-
 .tw-bottom-4{
   bottom: 1rem;
 }
@@ -118,16 +122,8 @@
   left: 0px;
 }
 
-.tw-left-1\/2{
-  left: 50%;
-}
-
 .tw-left-4{
   left: 1rem;
-}
-
-.tw-right-0{
-  right: 0px;
 }
 
 .tw-right-auto{
@@ -136,14 +132,6 @@
 
 .tw-top-0{
   top: 0px;
-}
-
-.tw-top-1\/2{
-  top: 50%;
-}
-
-.tw-z-10{
-  z-index: 10;
 }
 
 .tw-z-\[1\]{
@@ -166,10 +154,6 @@
   order: 4;
 }
 
-.tw-m-0{
-  margin: 0px;
-}
-
 .tw-mx-1{
   margin-left: 0.25rem;
   margin-right: 0.25rem;
@@ -185,18 +169,9 @@
   margin-bottom: 0.75rem;
 }
 
-.tw-my-4{
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
-.tw-my-8{
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
-.\!tw-mb-0{
-  margin-bottom: 0px !important;
+.tw-my-2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .-tw-mb-px{
@@ -205,10 +180,6 @@
 
 .tw-mb-0{
   margin-bottom: 0px;
-}
-
-.tw-mb-1{
-  margin-bottom: 0.25rem;
 }
 
 .tw-mb-10{
@@ -229,10 +200,6 @@
 
 .tw-mb-2{
   margin-bottom: 0.5rem;
-}
-
-.tw-mb-24{
-  margin-bottom: 6rem;
 }
 
 .tw-mb-3{
@@ -263,25 +230,8 @@
   margin-left: 1rem;
 }
 
-.tw-mr-0{
-  margin-right: 0px;
-}
-
-.tw-mr-1{
-  margin-right: 0.25rem;
-}
-
-.tw-mr-2{
-  margin-right: 0.5rem;
-}
-
-.tw-mr-4{
-  margin-right: 1rem;
-}
-
 .tw-ms-0{
-  -webkit-margin-start: 0px;
-          margin-inline-start: 0px;
+  margin-inline-start: 0px;
 }
 
 .tw-mt-0{
@@ -302,10 +252,6 @@
 
 .tw-mt-4{
   margin-top: 1rem;
-}
-
-.tw-mt-6{
-  margin-top: 1.5rem;
 }
 
 .tw-mt-8{
@@ -332,16 +278,8 @@
   display: none;
 }
 
-.\!tw-h-auto{
-  height: auto !important;
-}
-
 .tw-h-10{
   height: 2.5rem;
-}
-
-.tw-h-12{
-  height: 3rem;
 }
 
 .tw-h-3{
@@ -356,16 +294,8 @@
   height: 2px;
 }
 
-.tw-h-\[8em\]{
-  height: 8em;
-}
-
 .tw-h-full{
   height: 100%;
-}
-
-.tw-max-h-10{
-  max-height: 2.5rem;
 }
 
 .tw-w-1\/2{
@@ -376,16 +306,12 @@
   width: 33.333333%;
 }
 
-.tw-w-1\/5{
-  width: 20%;
-}
-
 .tw-w-10{
   width: 2.5rem;
 }
 
-.tw-w-12{
-  width: 3rem;
+.tw-w-2\/5{
+  width: 40%;
 }
 
 .tw-w-3{
@@ -396,56 +322,20 @@
   width: 2rem;
 }
 
-.tw-w-\[90\%\]{
-  width: 90%;
-}
-
-.tw-w-auto{
-  width: auto;
-}
-
 .tw-w-full{
   width: 100%;
-}
-
-.tw-max-w-\[640px\]{
-  max-width: 640px;
 }
 
 .tw-flex-1{
   flex: 1 1 0%;
 }
 
-.tw-flex-shrink-0{
-  flex-shrink: 0;
-}
-
 .tw-shrink-0{
   flex-shrink: 0;
 }
 
-.-tw-translate-x-1\/2{
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-tw-translate-y-1\/2{
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.tw-scale-75{
-  --tw-scale-x: .75;
-  --tw-scale-y: .75;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .tw-cursor-pointer{
   cursor: pointer;
-}
-
-.tw-flex-col{
-  flex-direction: column;
 }
 
 .tw-flex-wrap{
@@ -464,16 +354,16 @@
   align-items: baseline;
 }
 
-.tw-justify-start{
-  justify-content: flex-start;
-}
-
 .tw-justify-center{
   justify-content: center;
 }
 
 .tw-justify-between{
   justify-content: space-between;
+}
+
+.tw-gap-4{
+  gap: 1rem;
 }
 
 .tw-overflow-hidden{
@@ -488,6 +378,10 @@
   white-space: nowrap;
 }
 
+.tw-rounded{
+  border-radius: 0.25rem;
+}
+
 .tw-rounded-2xl{
   border-radius: 1rem;
 }
@@ -496,12 +390,8 @@
   border-radius: 9999px;
 }
 
-.tw-rounded-lg{
-  border-radius: 0.5rem;
-}
-
-.tw-rounded-md{
-  border-radius: 0.375rem;
+.tw-rounded-xl{
+  border-radius: 0.75rem;
 }
 
 .tw-border{
@@ -514,11 +404,6 @@
 
 .tw-border-2{
   border-width: 2px;
-}
-
-.tw-border-y{
-  border-top-width: 1px;
-  border-bottom-width: 1px;
 }
 
 .tw-border-b{
@@ -556,11 +441,6 @@
   border-color: rgb(214 211 209 / var(--tw-border-opacity));
 }
 
-.tw-border-stone-400{
-  --tw-border-opacity: 1;
-  border-color: rgb(168 162 158 / var(--tw-border-opacity));
-}
-
 .tw-border-stone-600{
   --tw-border-opacity: 1;
   border-color: rgb(87 83 78 / var(--tw-border-opacity));
@@ -570,20 +450,14 @@
   border-color: transparent;
 }
 
-.tw-border-y-slate-200{
+.tw-border-vi{
   --tw-border-opacity: 1;
-  border-top-color: rgb(226 232 240 / var(--tw-border-opacity));
-  border-bottom-color: rgb(226 232 240 / var(--tw-border-opacity));
+  border-color: rgb(246 190 0 / var(--tw-border-opacity));
 }
 
-.tw-bg-\[\#efefef\]{
+.tw-bg-\[\#fffcf4\]{
   --tw-bg-opacity: 1;
-  background-color: rgb(239 239 239 / var(--tw-bg-opacity));
-}
-
-.tw-bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(255 252 244 / var(--tw-bg-opacity));
 }
 
 .tw-bg-stone-100{
@@ -596,9 +470,9 @@
   background-color: rgb(214 211 209 / var(--tw-bg-opacity));
 }
 
-.tw-bg-stone-50{
+.tw-bg-vi{
   --tw-bg-opacity: 1;
-  background-color: rgb(250 250 249 / var(--tw-bg-opacity));
+  background-color: rgb(246 190 0 / var(--tw-bg-opacity));
 }
 
 .tw-bg-white{
@@ -606,50 +480,17 @@
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.tw-bg-cover{
-  background-size: cover;
-}
-
-.tw-bg-no-repeat{
-  background-repeat: no-repeat;
-}
-.tw-object-contain{
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
 .tw-object-cover{
   -o-object-fit: cover;
      object-fit: cover;
 }
 
-.\!tw-p-0{
-  padding: 0px !important;
-}
-
-.tw-p-1{
-  padding: 0.25rem;
-}
-
-.tw-p-2{
-  padding: 0.5rem;
+.tw-p-3{
+  padding: 0.75rem;
 }
 
 .tw-p-4{
   padding: 1rem;
-}
-
-.tw-p-6{
-  padding: 1.5rem;
-}
-
-.tw-p-\[2px\]{
-  padding: 2px;
-}
-
-.tw-px-0{
-  padding-left: 0px;
-  padding-right: 0px;
 }
 
 .tw-px-2{
@@ -662,19 +503,14 @@
   padding-right: 1rem;
 }
 
-.tw-px-6{
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.tw-py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .tw-py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.tw-py-5{
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
 }
 
 .tw-py-6{
@@ -694,28 +530,12 @@
   padding-bottom: 4rem;
 }
 
-.tw-pb-2{
-  padding-bottom: 0.5rem;
-}
-
 .tw-pb-4{
   padding-bottom: 1rem;
 }
 
 .tw-pb-8{
   padding-bottom: 2rem;
-}
-
-.tw-pl-6{
-  padding-left: 1.5rem;
-}
-
-.tw-pr-0{
-  padding-right: 0px;
-}
-
-.tw-pr-4{
-  padding-right: 1rem;
 }
 
 .tw-pt-0{
@@ -728,10 +548,6 @@
 
 .tw-pt-16{
   padding-top: 4rem;
-}
-
-.tw-pt-2{
-  padding-top: 0.5rem;
 }
 
 .tw-pt-4{
@@ -750,10 +566,6 @@
   text-align: center;
 }
 
-.tw-text-right{
-  text-align: right;
-}
-
 .tw-text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
@@ -767,10 +579,6 @@
 .tw-text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
-}
-
-.tw-text-\[22px\]{
-  font-size: 22px;
 }
 
 .tw-text-base{
@@ -790,7 +598,7 @@
 
 .tw-text-xl{
   font-size: 1.25rem;
-  line-height: 1.75rem;
+  line-height: 1.5rem;
 }
 
 .tw-font-medium{
@@ -813,14 +621,6 @@
   line-height: 1.625;
 }
 
-.tw-leading-tight{
-  line-height: 1.25;
-}
-
-.tw-tracking-normal{
-  letter-spacing: 0em;
-}
-
 .tw-tracking-tighter{
   letter-spacing: -0.05em;
 }
@@ -840,27 +640,14 @@
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.tw-opacity-0{
-  opacity: 0;
-}
-
-.tw-opacity-50{
-  opacity: 0.5;
-}
-
-.tw-grayscale{
-  --tw-grayscale: grayscale(100%);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+.tw-line-through{
+  text-decoration-line: line-through;
 }
 
 .tw-transition-all{
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-}
-
-.tw-duration-500{
-  transition-duration: 500ms;
 }
 
 .bg-vi{
@@ -889,7 +676,7 @@
 @media (min-width: 1280px){
   .ebike-price-wrap .text-subdued{
     font-size: 1.25rem;
-    line-height: 1.75rem;
+    line-height: 1.5rem;
   }
 }
 
@@ -899,7 +686,7 @@
   padding-top: 1rem;
   padding-bottom: 1rem;
   font-size: 1.25rem;
-  line-height: 1.75rem;
+  line-height: 1.5rem;
 }
 
 @media (min-width: 1280px){
@@ -911,7 +698,7 @@
   }
 }
 
-@media (min-width: 1440px){
+@media (min-width: 1536px){
   .button--2xl{
     padding-left: 7rem;
     padding-right: 7rem;
@@ -921,10 +708,8 @@
 .page-width{
   --context-section-spacing-inline: var(--container-gutter);
   --calculated-section-spacing-inline: var(--section-spacing-inline, var(--context-section-spacing-inline));
-  -webkit-padding-start: max(var(--calculated-section-spacing-inline),50% - var(--container-max-width) / 2);
-          padding-inline-start: max(var(--calculated-section-spacing-inline),50% - var(--container-max-width) / 2);
-  -webkit-padding-end: max(var(--calculated-section-spacing-inline),50% - var(--container-max-width) / 2);
-          padding-inline-end: max(var(--calculated-section-spacing-inline),50% - var(--container-max-width) / 2);
+  padding-inline-start: max(var(--calculated-section-spacing-inline),50% - var(--container-max-width) / 2);
+  padding-inline-end: max(var(--calculated-section-spacing-inline),50% - var(--container-max-width) / 2);
 }
 
 .mb-carousel > *{
@@ -978,7 +763,7 @@
   padding-left: 1.5rem;
 }
 
-@media (min-width: 768px){
+@media (min-width: 769px){
   [section-name="accordion"] .style1{
     margin-bottom: 2.5rem;
   }
@@ -990,7 +775,7 @@
 
 [section-name="accordion"] .style1 > h3{
   font-size: 1.25rem;
-  line-height: 1.75rem;
+  line-height: 1.5rem;
   font-weight: 600;
 }
 
@@ -1010,7 +795,7 @@
   padding-left: 0.75rem;
 }
 
-@media (min-width: 768px){
+@media (min-width: 769px){
   [section-name="accordion"] .style2{
     padding-left: 1.5rem;
   }
@@ -1053,7 +838,7 @@
   padding-left: 0.75rem;
 }
 
-@media (min-width: 768px){
+@media (min-width: 769px){
   [section-name="accordion"] .style3{
     padding-left: 1.5rem;
   }
@@ -1098,7 +883,7 @@
   display: none;
 }
 
-@media (min-width: 768px){
+@media (min-width: 769px){
   [section-name="tab-product-content"] .carousel-cell-product:nth-child(n+4){
     display: block;
   }
@@ -1110,7 +895,7 @@
   width: 83.333333%;
 }
 
-@media (min-width: 768px){
+@media (min-width: 769px){
   [section-name="tab-product-content"] .carousel-cell-product .product-card__figure{
     width: 80%;
   }
@@ -1126,7 +911,7 @@
   padding: 1rem;
 }
 
-@media (min-width: 768px){
+@media (min-width: 769px){
   [section-name="tab-product-content"] .carousel-cell-product .product-card__info{
     padding: 1.5rem;
   }
@@ -1216,7 +1001,7 @@
   padding-right: 1rem;
 }
 
-@media (min-width: 768px){
+@media (min-width: 769px){
   [section-name="featured-product-ebike"]{
     border-radius: 0px;
     padding: 0px;
@@ -1302,32 +1087,11 @@
 }
 
 .first\:tw-mr-6:first-child{
-  margin-right: 0rem;
+  margin-right: 1.5rem;
 }
 
 .last\:\!tw-border-0:last-child{
   border-width: 0px !important;
-}
-
-.hover\:tw-flex-\[2\]:hover{
-  flex: 2;
-}
-
-.hover\:tw-scale-105:hover{
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:tw-scale-95:hover{
-  --tw-scale-x: .95;
-  --tw-scale-y: .95;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:tw-border-black:hover{
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .hover\:tw-border-gray-300:hover{
@@ -1335,26 +1099,13 @@
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
-.hover\:tw-bg-stone-100:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 244 / var(--tw-bg-opacity));
-}
-
 .hover\:tw-text-gray-600:hover{
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
-.hover\:tw-opacity-70:hover{
-  opacity: 0.7;
-}
-
 .hover\:tw-opacity-80:hover{
   opacity: 0.8;
-}
-
-.tw-group:hover .group-hover\:\!tw-opacity-100{
-  opacity: 1 !important;
 }
 
 .tw-group:hover .group-hover\:before\:tw-w-full::before{
@@ -1362,7 +1113,7 @@
   width: 100%;
 }
 
-@media (min-width: 768px){
+@media (min-width: 769px){
   .md\:tw-bottom-8{
     bottom: 2rem;
   }
@@ -1371,21 +1122,12 @@
     left: auto;
   }
 
-  .md\:tw-right-\[24\%\]{
-    right: 24%;
+  .md\:tw-right-\[18\%\]{
+    right: 18%;
   }
 
   .md\:tw-order-2{
     order: 2;
-  }
-
-  .md\:tw-order-none{
-    order: 0;
-  }
-
-  .md\:tw-mx-4{
-    margin-left: 1rem;
-    margin-right: 1rem;
   }
 
   .md\:tw-my-5{
@@ -1413,10 +1155,6 @@
     margin-bottom: 4.5rem;
   }
 
-  .md\:tw-mb-2{
-    margin-bottom: 0.5rem;
-  }
-
   .md\:tw-mb-3{
     margin-bottom: 0.75rem;
   }
@@ -1435,14 +1173,6 @@
 
   .md\:tw-ml-6{
     margin-left: 1.5rem;
-  }
-
-  .md\:tw-ml-\[8\%\]{
-    margin-left: 8%;
-  }
-
-  .md\:tw-mr-8{
-    margin-right: 2rem;
   }
 
   .md\:tw-mt-0{
@@ -1477,10 +1207,6 @@
     margin-top: 2rem;
   }
 
-  .md\:tw-block{
-    display: block;
-  }
-
   .md\:tw-flex{
     display: flex;
   }
@@ -1489,32 +1215,12 @@
     display: grid;
   }
 
-  .md\:tw-hidden{
-    display: none;
-  }
-
-  .md\:tw-h-\[80vh\]{
-    height: 80vh;
-  }
-
-  .md\:tw-h-auto{
-    height: auto;
-  }
-
-  .md\:tw-max-h-\[5vw\]{
-    max-height: 5vw;
-  }
-
   .md\:tw-w-1\/2{
     width: 50%;
   }
 
   .md\:tw-w-1\/3{
     width: 33.333333%;
-  }
-
-  .md\:tw-w-1\/4{
-    width: 25%;
   }
 
   .md\:tw-w-2\/5{
@@ -1533,14 +1239,6 @@
     width: 100%;
   }
 
-  .md\:tw-flex-row{
-    flex-direction: row;
-  }
-
-  .md\:tw-flex-nowrap{
-    flex-wrap: nowrap;
-  }
-
   .md\:tw-items-center{
     align-items: center;
   }
@@ -1553,16 +1251,8 @@
     border-radius: 1.5rem;
   }
 
-  .md\:tw-rounded-xl{
-    border-radius: 0.75rem;
-  }
-
   .md\:tw-border-b-\[6px\]{
     border-bottom-width: 6px;
-  }
-
-  .md\:tw-p-0{
-    padding: 0px;
   }
 
   .md\:tw-p-10{
@@ -1573,37 +1263,9 @@
     padding: 1rem;
   }
 
-  .md\:tw-p-5{
-    padding: 1.25rem;
-  }
-
-  .md\:tw-p-8{
-    padding: 2rem;
-  }
-
-  .md\:tw-px-0{
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-
-  .md\:tw-px-10{
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-
   .md\:tw-px-2{
     padding-left: 0.5rem;
     padding-right: 0.5rem;
-  }
-
-  .md\:tw-px-4{
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
-  .md\:tw-px-5{
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
   }
 
   .md\:tw-px-8{
@@ -1616,17 +1278,8 @@
     padding-bottom: 0.5rem;
   }
 
-  .md\:tw-py-6{
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-  }
-
   .md\:tw-pb-0{
     padding-bottom: 0px;
-  }
-
-  .md\:tw-pb-1{
-    padding-bottom: 0.25rem;
   }
 
   .md\:tw-pb-12{
@@ -1645,28 +1298,8 @@
     padding-bottom: 1.5rem;
   }
 
-  .md\:tw-pl-1{
-    padding-left: 0.25rem;
-  }
-
-  .md\:tw-pl-2{
-    padding-left: 0.5rem;
-  }
-
-  .md\:tw-pl-5{
-    padding-left: 1.25rem;
-  }
-
-  .md\:tw-pr-2{
-    padding-right: 0.5rem;
-  }
-
   .md\:tw-pr-4{
     padding-right: 1rem;
-  }
-
-  .md\:tw-pr-5{
-    padding-right: 1.25rem;
   }
 
   .md\:tw-pr-8{
@@ -1721,10 +1354,6 @@
     line-height: 1;
   }
 
-  .md\:tw-text-\[26px\]{
-    font-size: 26px;
-  }
-
   .md\:tw-text-base{
     font-size: 1rem;
     line-height: 1.5rem;
@@ -1735,30 +1364,9 @@
     line-height: 1.75rem;
   }
 
-  .md\:tw-text-sm{
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
-
   .md\:tw-text-xl{
     font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .md\:tw-opacity-40{
-    opacity: 0.4;
-  }
-
-  .md\:odd\:tw-pr-1:nth-child(odd){
-    padding-right: 0.25rem;
-  }
-
-  .md\:even\:tw-pl-1:nth-child(even){
-    padding-left: 0.25rem;
-  }
-
-  .md\:hover\:tw-opacity-0:hover{
-    opacity: 0;
+    line-height: 1.5rem;
   }
 }
 
@@ -1803,10 +1411,6 @@
     width: 33.333333%;
   }
 
-  .lg\:tw-w-1\/4{
-    width: 25%;
-  }
-
   .lg\:tw-w-full{
     width: 100%;
   }
@@ -1831,18 +1435,6 @@
     padding-bottom: 2rem;
   }
 
-  .lg\:tw-pl-10{
-    padding-left: 2.5rem;
-  }
-
-  .lg\:tw-pl-8{
-    padding-left: 2rem;
-  }
-
-  .lg\:tw-pr-14{
-    padding-right: 3.5rem;
-  }
-
   .lg\:tw-pt-14{
     padding-top: 3.5rem;
   }
@@ -1861,8 +1453,8 @@
 }
 
 @media (min-width: 1280px){
-  .xl\:tw-right-\[27\%\]{
-    right: 27%;
+  .xl\:tw-right-\[21\%\]{
+    right: 21%;
   }
 
   .xl\:tw-my-8{
@@ -1894,10 +1486,6 @@
     margin-bottom: 1.5rem;
   }
 
-  .xl\:tw-mr-12{
-    margin-right: 3rem;
-  }
-
   .xl\:tw-mt-10{
     margin-top: 2.5rem;
   }
@@ -1914,20 +1502,8 @@
     margin-top: 2rem;
   }
 
-  .xl\:tw-max-h-12{
-    max-height: 3rem;
-  }
-
   .xl\:tw-w-1\/2{
     width: 50%;
-  }
-
-  .xl\:tw-w-1\/3{
-    width: 33.333333%;
-  }
-
-  .xl\:tw-w-2\/3{
-    width: 66.666667%;
   }
 
   .xl\:tw-w-2\/5{
@@ -1938,18 +1514,9 @@
     width: 83.333333%;
   }
 
-  .xl\:tw-p-8{
-    padding: 2rem;
-  }
-
   .xl\:tw-px-20{
     padding-left: 5rem;
     padding-right: 5rem;
-  }
-
-  .xl\:tw-px-8{
-    padding-left: 2rem;
-    padding-right: 2rem;
   }
 
   .xl\:tw-py-12{
@@ -1971,10 +1538,6 @@
 
   .xl\:tw-pb-4{
     padding-bottom: 1rem;
-  }
-
-  .xl\:tw-pl-10{
-    padding-left: 2.5rem;
   }
 
   .xl\:tw-pr-8{
@@ -2018,18 +1581,13 @@
     line-height: 1;
   }
 
-  .xl\:tw-text-base{
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
   .xl\:tw-text-xl{
     font-size: 1.25rem;
-    line-height: 1.75rem;
+    line-height: 1.5rem;
   }
 }
 
-@media (min-width: 1440px){
+@media (min-width: 1536px){
   .\32xl\:tw-mb-12{
     margin-bottom: 3rem;
   }
@@ -2070,31 +1628,6 @@
     margin-top: 1.5rem;
   }
 
-  .\32xl\:tw-w-1\/4{
-    width: 25%;
-  }
-
-  .\32xl\:tw-w-1\/5{
-    width: 20%;
-  }
-
-  .\32xl\:tw-w-auto{
-    width: auto;
-  }
-
-  .\32xl\:tw-flex-1{
-    flex: 1 1 0%;
-  }
-
-  .\32xl\:tw-flex-nowrap{
-    flex-wrap: nowrap;
-  }
-
-  .\32xl\:tw-px-4{
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
   .\32xl\:tw-pb-12{
     padding-bottom: 3rem;
   }
@@ -2109,10 +1642,6 @@
 
   .\32xl\:tw-pb-6{
     padding-bottom: 1.5rem;
-  }
-
-  .\32xl\:tw-pl-12{
-    padding-left: 3rem;
   }
 
   .\32xl\:tw-pr-12{
@@ -2143,16 +1672,6 @@
     padding-top: 1.5rem;
   }
 
-  .\32xl\:tw-text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .\32xl\:tw-text-4xl{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
   .\32xl\:tw-text-6xl{
     font-size: 3.75rem;
     line-height: 1;
@@ -2165,32 +1684,8 @@
 
   .\32xl\:tw-text-xl{
     font-size: 1.25rem;
-    line-height: 1.75rem;
+    line-height: 1.5rem;
   }
-}
-
-@media (min-width: 1535px){
-  .\33xl\:tw-right-\[30\%\]{
-    right: 21%;
-  }
-}
-
-@media (min-width: 768px){
-  .\[\&\:nth-child\(2n\)\]\:md\:tw-pl-1:nth-child(2n){
-    padding-left: 0.25rem;
-  }
-
-  .\[\&\:nth-child\(2n-1\)\]\:md\:tw-pr-1:nth-child(2n-1){
-    padding-right: 0.25rem;
-  }
-}
-
-.\[\&\:nth-child\(even\)\>div\]\:tw-ml-1:nth-child(even)>div{
-  margin-left: 0.25rem;
-}
-
-.\[\&\:nth-child\(odd\)\>div\]\:tw-mr-1:nth-child(odd)>div{
-  margin-right: 0.25rem;
 }
 
 .\[\&\>\*\:nth-child\(2n\)\]\:\!tw-border-0>*:nth-child(2n){
