--- a/snippets/product-info.liquid
+++ b/snippets/product-info.liquid
@@ -404,6 +404,8 @@ font-weight: 400 !important;
             <path fill-rule="evenodd" clip-rule="evenodd" d="M12 4C12.5523 4 13 4.44772 13 5V11H19C19.5523 11 20 11.4477 20 12C20 12.5523 19.5523 13 19 13H13V19C13 19.5523 12.5523 20 12 20C11.4477 20 11 19.5523 11 19V13H5C4.44772 13 4 12.5523 4 12C4 11.4477 4.44772 11 5 11H11V5C11 4.44772 11.4477 4 12 4Z">
           </path>
         </svg>
+      
+      
       </div>
     </div>
 
@@ -462,6 +464,27 @@ font-weight: 400 !important;
           <button is="share-button" class="product-info__native-share">
             {%- render 'icon' with 'share' -%} {{- 'general.social.share' | t -}}
           </button>
+        </div>
+      {%- when 'gift' -%}
+        <div>
+          <h4 class="tw-font-semibold tw-my-2">{{block.settings.title}}</h4>
+          {% assign pr = block.settings.pr %}
+          <div class="tw-flex tw-gap-4 tw-items-center tw-border-vi tw-bg-[#fffcf4] tw-border tw-border-solid tw-rounded-xl md:tw-p-4 tw-p-3">
+            <div class="md:tw-w-1/3 tw-w-2/5">
+              <a href="{{ pr.url }}">
+                {{- pr.featured_image | image_url: width: pr.featured_image.width | image_tag: loading: 'lazy', sizes: '(max-width: 699px) 80px, 150px', widths: '80,150,160,300' -}}
+              </a>
+            </div>
+            <div class="tw-text-sm"> 
+              <p class="tw-mb-2">
+                <span class="tw-text-white tw-bg-vi tw-py-1 tw-px-2 tw-rounded">{{ block.settings.badge_con }}</span>
+                <span class="tw-line-through">{{pr.price_min | money_with_currency}}</span>
+              </p>
+              <p class="tw-font-semibold tw-mb-2"> <a href="{{ pr.url }}"> {{ pr.title }} </a> </p>
+              <p>{{ block.settings.con }}</p>
+            </div>
+          
+          </div>
         </div>
     {%- endcase -%}
   {%- endfor -%}
