--- a/snippets/tracking-Ptengine-tag.liquid
+++ b/snippets/tracking-Ptengine-tag.liquid
@@ -1,3 +1,3 @@
 <!-- Ptengine Tag -->
-<script src="https://js.ptengine.com/27ote1t3.js"></script>
+<script src="https://js.ptengine.com/1est5qjj.js"></script>
 <!-- End Ptengine Tag -->
