--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -51,29 +51,31 @@ NOTE TO DEVELOPERS: welcome to Impact theme! We hope that you will enjoy editing
     {%- render 'css-variables' -%}
     {%- render 'js-variables' -%}
 
-   <script type="module" src="{{ 'vendor.min.js' | asset_url }}"></script>
-    <script type="module" src="{{ 'theme.js' | asset_url }}"></script>
-    <script type="module" src="{{ 'sections.js' | asset_url }}"></script>
-    <script type="module" src="{{ 'custom.js' | asset_url }}"></script>
-    <script type="module" src="{{ 'flickity.pkgd.min.js' | asset_url }}"></script>
+    <script src="{{ 'jquery.min.js' | asset_url }}"  ></script>
+    <script defer type="module" src="{{ 'vendor.min.js' | asset_url }}"></script>
+    <script defer type="module" src="{{ 'theme.js' | asset_url }}"></script>
+    <script defer type="module" src="{{ 'sections.js' | asset_url }}"></script>
+    <script defer type="module" src="{{ 'custom.js' | asset_url }}"></script>
+    <script defer type="module" src="{{ 'flickity.pkgd.min.js' | asset_url }}"></script>
+    <script defer src="{{ 'swiper.js' | asset_url }}" ></script>
+
 
     {{ content_for_header }}
-
-  {{- 'theme.css' | asset_url | stylesheet_tag: preload: true -}}
+    {{ 'swiper.css' | asset_url | stylesheet_tag }}
+    {{- 'theme.css' | asset_url | stylesheet_tag: preload: true -}}
     {{- 'tw-custom.css' | asset_url | stylesheet_tag: preload: true -}}
     {{- 'flickity.min.css' | asset_url | stylesheet_tag: preload: true -}}
 
-    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
   </head>
 
 
-  <body class="{% if settings.show_page_transition %}page-transition{% endif %} {% if settings.zoom_image_on_hover %}zoom-image--enabled{% endif %}"><script type="text/javascript" data-cmp-ab="1" src="https://cdn.consentmanager.net/delivery/autoblocking/2c2f9b17e1f72.js" data-cmp-host="d.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="1"></script>
+  <body class="{% if settings.show_page_transition %}page-transition{% endif %} {% if settings.zoom_image_on_hover %}zoom-image--enabled{% endif %}">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NKZHFLW7"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <script type="text/javascript" data-cmp-ab="1" src="https://cdn.consentmanager.net/delivery/autoblocking/2c2f9b17e1f72.js" data-cmp-host="d.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="1"></script>
+    <script async type="text/javascript" data-cmp-ab="1" src="https://cdn.consentmanager.net/delivery/autoblocking/2c2f9b17e1f72.js" data-cmp-host="d.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="1"></script>
    
  {%- render 'shadow-dom-templates' -%}
 
@@ -104,9 +106,6 @@ NOTE TO DEVELOPERS: welcome to Impact theme! We hope that you will enjoy editing
       {%- endif -%}
     </main>
 
-    <script src="{{ 'jquery.min.js' | asset_url }}"  ></script>
-    {{ 'swiper.css' | asset_url | stylesheet_tag }}
-    <script src="{{ 'swiper.js' | asset_url }}" ></script>
     {% render 'back-to-the-top' %}
   </body>
 </html>
