--- a/assets/tw-custom.css
+++ b/assets/tw-custom.css
@@ -114,12 +114,12 @@
   position: relative;
 }
 
-.tw-bottom-4{
-  bottom: 1rem;
+.tw-bottom-1{
+  bottom: 0.25rem;
 }
 
-.tw-bottom-\[-43px\]{
-  bottom: -43px;
+.tw-bottom-4{
+  bottom: 1rem;
 }
 
 .tw-left-0{
@@ -140,14 +140,6 @@
 
 .tw-top-0{
   top: 0px;
-}
-
-.tw-bottom-12{
-  bottom: 3rem;
-}
-
-.tw-bottom-1{
-  bottom: 0.25rem;
 }
 
 .tw-z-\[1\]{
@@ -238,10 +230,6 @@
   margin-bottom: 2rem;
 }
 
-.tw-mb-\[55px\]{
-  margin-bottom: 55px;
-}
-
 .tw-ml-2{
   margin-left: 0.5rem;
 }
@@ -318,14 +306,6 @@
   height: 100%;
 }
 
-.tw-min-h-\[126px\]{
-  min-height: 126px;
-}
-
-.tw-min-h-48{
-  min-height: 12rem;
-}
-
 .tw-w-1\/2{
   width: 50%;
 }
@@ -342,6 +322,10 @@
   width: 40%;
 }
 
+.tw-w-20{
+  width: 5rem;
+}
+
 .tw-w-3{
   width: 0.75rem;
 }
@@ -350,28 +334,12 @@
   width: 2rem;
 }
 
+.tw-w-\[31\%\]{
+  width: 31%;
+}
+
 .tw-w-full{
   width: 100%;
-}
-
-.tw-w-screen{
-  width: 100vw;
-}
-
-.tw-min-w-\[126px\]{
-  min-width: 126px;
-}
-
-.tw-min-w-48{
-  min-width: 12rem;
-}
-
-.tw-max-w-\[280px\]{
-  max-width: 280px;
-}
-
-.tw-max-w-full{
-  max-width: 100%;
 }
 
 .tw-flex-1{
@@ -403,6 +371,10 @@
   flex-wrap: nowrap;
 }
 
+.tw-items-end{
+  align-items: flex-end;
+}
+
 .tw-items-center{
   align-items: center;
 }
@@ -419,12 +391,16 @@
   justify-content: space-between;
 }
 
+.tw-gap-2{
+  gap: 0.5rem;
+}
+
 .tw-gap-4{
   gap: 1rem;
 }
 
-.tw-gap-2{
-  gap: 0.5rem;
+.tw-gap-\[3\.5\%\]{
+  gap: 3.5%;
 }
 
 .tw-overflow-hidden{
@@ -465,10 +441,6 @@
 
 .tw-border-2{
   border-width: 2px;
-}
-
-.tw-border-\[3px\]{
-  border-width: 3px;
 }
 
 .tw-border-b{
@@ -553,10 +525,6 @@
   padding: 1rem;
 }
 
-.tw-p-8{
-  padding: 2rem;
-}
-
 .tw-p-6{
   padding: 1.5rem;
 }
@@ -569,16 +537,6 @@
 .tw-px-4{
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-.tw-px-\[18px\]{
-  padding-left: 18px;
-  padding-right: 18px;
-}
-
-.tw-px-\[20px\]{
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 .tw-py-1{
@@ -594,16 +552,6 @@
 .tw-py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-}
-
-.tw-px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.tw-py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
 }
 
 .tw-pb-0{
@@ -622,20 +570,12 @@
   padding-bottom: 1rem;
 }
 
+.tw-pb-6{
+  padding-bottom: 1.5rem;
+}
+
 .tw-pb-8{
   padding-bottom: 2rem;
-}
-
-.tw-pb-\[20px\]{
-  padding-bottom: 20px;
-}
-
-.tw-pb-\[30px\]{
-  padding-bottom: 30px;
-}
-
-.tw-pb-\[40px\]{
-  padding-bottom: 40px;
 }
 
 .tw-pt-0{
@@ -650,6 +590,10 @@
   padding-top: 4rem;
 }
 
+.tw-pt-2{
+  padding-top: 0.5rem;
+}
+
 .tw-pt-4{
   padding-top: 1rem;
 }
@@ -658,32 +602,12 @@
   padding-top: 2rem;
 }
 
-.tw-pt-\[10px\]{
-  padding-top: 10px;
-}
-
-.tw-pt-\[25px\]{
-  padding-top: 25px;
-}
-
-.tw-pt-\[30px\]{
-  padding-top: 30px;
-}
-
-.tw-pt-2{
-  padding-top: 0.5rem;
-}
-
 .tw-text-left{
   text-align: left;
 }
 
 .tw-text-center{
   text-align: center;
-}
-
-.tw-text-right{
-  text-align: right;
 }
 
 .tw-text-2xl{
@@ -699,14 +623,6 @@
 .tw-text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
-}
-
-.tw-text-\[65px\]{
-  font-size: 65px;
-}
-
-.tw-text-\[70px\]{
-  font-size: 70px;
 }
 
 .tw-text-base{
@@ -727,6 +643,10 @@
 .tw-text-xl{
   font-size: 1.25rem;
   line-height: 1.5rem;
+}
+
+.tw-text-\[22px\]{
+  font-size: 22px;
 }
 
 .tw-font-medium{
@@ -1264,8 +1184,8 @@
     left: auto;
   }
 
-  .md\:tw-right-\[18\%\]{
-    right: 18%;
+  .md\:tw-right-\[24\%\]{
+    right: 24%;
   }
 
   .md\:tw-order-2{
@@ -1317,10 +1237,6 @@
     margin-left: 1.5rem;
   }
 
-  .md\:tw-mr-\[39px\]{
-    margin-right: 39px;
-  }
-
   .md\:tw-mt-0{
     margin-top: 0px;
   }
@@ -1353,10 +1269,6 @@
     margin-top: 2rem;
   }
 
-  .md\:tw-mr-8{
-    margin-right: 2rem;
-  }
-
   .md\:tw-flex{
     display: flex;
   }
@@ -1373,6 +1285,14 @@
     width: 33.333333%;
   }
 
+  .md\:tw-w-1\/4{
+    width: 25%;
+  }
+
+  .md\:tw-w-1\/5{
+    width: 20%;
+  }
+
   .md\:tw-w-2\/5{
     width: 40%;
   }
@@ -1385,16 +1305,16 @@
     width: 55%;
   }
 
+  .md\:tw-w-auto{
+    width: auto;
+  }
+
   .md\:tw-w-full{
     width: 100%;
   }
 
-  .md\:tw-max-w-none{
-    max-width: none;
-  }
-
-  .md\:tw-max-w-\[280px\]{
-    max-width: 280px;
+  .md\:tw-flex-nowrap{
+    flex-wrap: nowrap;
   }
 
   .md\:tw-items-center{
@@ -1411,6 +1331,18 @@
 
   .md\:tw-gap-4{
     gap: 1rem;
+  }
+
+  .md\:tw-gap-8{
+    gap: 2rem;
+  }
+
+  .md\:tw-gap-16{
+    gap: 4rem;
+  }
+
+  .md\:tw-gap-12{
+    gap: 3rem;
   }
 
   .md\:tw-rounded-3xl{
@@ -1433,24 +1365,27 @@
     padding: 2rem;
   }
 
+  .md\:tw-p-6{
+    padding: 1.5rem;
+  }
+
+  .md\:tw-p-7{
+    padding: 1.75rem;
+  }
+
   .md\:tw-px-2{
     padding-left: 0.5rem;
     padding-right: 0.5rem;
   }
 
+  .md\:tw-px-6{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
   .md\:tw-px-8{
     padding-left: 2rem;
     padding-right: 2rem;
-  }
-
-  .md\:tw-px-\[10\%\]{
-    padding-left: 10%;
-    padding-right: 10%;
-  }
-
-  .md\:tw-px-\[52px\]{
-    padding-left: 52px;
-    padding-right: 52px;
   }
 
   .md\:tw-py-2{
@@ -1461,6 +1396,11 @@
   .md\:tw-px-12{
     padding-left: 3rem;
     padding-right: 3rem;
+  }
+
+  .md\:tw-px-16{
+    padding-left: 4rem;
+    padding-right: 4rem;
   }
 
   .md\:tw-pb-0{
@@ -1515,16 +1455,16 @@
     padding-top: 2rem;
   }
 
-  .md\:tw-pt-\[85px\]{
-    padding-top: 85px;
-  }
-
-  .md\:tw-pt-24{
-    padding-top: 6rem;
+  .md\:tw-pt-2{
+    padding-top: 0.5rem;
   }
 
   .md\:tw-text-left{
     text-align: left;
+  }
+
+  .md\:tw-text-right{
+    text-align: right;
   }
 
   .md\:tw-text-2xl{
@@ -1545,10 +1485,6 @@
   .md\:tw-text-5xl{
     font-size: 3rem;
     line-height: 1;
-  }
-
-  .md\:tw-text-\[75px\]{
-    font-size: 75px;
   }
 
   .md\:tw-text-base{
@@ -1650,8 +1586,8 @@
 }
 
 @media (min-width: 1280px){
-  .xl\:tw-right-\[21\%\]{
-    right: 21%;
+  .xl\:tw-right-\[27\%\]{
+    right: 27%;
   }
 
   .xl\:tw-my-8{
@@ -1709,6 +1645,10 @@
 
   .xl\:tw-w-5\/6{
     width: 83.333333%;
+  }
+
+  .xl\:tw-gap-20{
+    gap: 5rem;
   }
 
   .xl\:tw-px-20{
